--- a/Workbook.Rmd
+++ b/Workbook.Rmd
@@ -5,10 +5,6 @@ date: '2022-09-23'
 output: html_document
 ---
 
-```{r setup, include=FALSE} 
-knitr::opts_chunk$set(include = FALSE) 
-```
-
 ## Libraries
 
 Libraries are an essential part of the R workflow, giving you all the necessary tools to complete the analysis. Different people use different libraries for certain aspects of analysis, but these are my favourites:
@@ -18,7 +14,7 @@ library(tidyverse)
 library(sf)
 library(tidycensus)
 library(tmap)
-tmap_mode("view")
+tmap_mode("plot")
 ```
 
 ## Part 1) Explore the data!
@@ -32,7 +28,7 @@ Today we will be working with three main types of data:
 ### Store data - SafeGraph places
 
 ```{r }
-places <- st_read("Data/GA_MSA_pts.gpkg", quiet = TRUE)
+places <- st_read("Data/places.gpkg", quiet = TRUE)
 ```
 
 Look at the attributes:
@@ -45,9 +41,7 @@ Let's take a look at the distribution of grocery stores:
 
 ```{r}
 grocery <- places %>%
-  filter(top_category == "Grocery Stores") %>%
-  mutate(brands = case_when(brands == "" ~ "Unclassified",
-                              TRUE ~ brands))
+  filter(top_category == "Grocery Stores")
 ```
 
 ```{r}
@@ -55,19 +49,19 @@ tm_shape(grocery) +
   tm_dots(col = "brands", size = 0.05)
 ```
 
-Lots of 'independent' grocery stores, but also large numbers of big brands such as LIDL, Circle K and Whole Foods. 
+Lots of 'Independent' grocery stores, but also large numbers of big brands such as LIDL, Circle K and Whole Foods. 
 
 ### US GEODEMOGRAPHIC CLASSIFICATION 
 
 ```{r}
-geodemo <- st_read("Data/GA_GD.gpkg", quiet = TRUE)
+geodemo <- st_read("Data/geodemographic.gpkg", quiet = TRUE)
 ```
 
 ```{r}
 glimpse(geodemo)
 ```
 
-The TractGroup column is the one we are interested in; every census tract in the US is assigned to one of 10 groups, based on the geodemographic characteristics of the area in question. 
+The 'TractGroup' column is the one we are interested in; every census tract in the US is assigned to one of 10 groups, based on the geodemographic characteristics of the area in question. 
 
 ```{r}
 tm_shape(geodemo) +
@@ -92,7 +86,7 @@ pop <- get_decennial(geography = "Tract", variables = "P001001",
 glimpse(pop)
 ```
 
-Here, the value column is the one we are interested in; total population in each census tract. 
+Here, the 'value' column is the one we are interested in; total population in each census tract. Let's merge this onto the geodemographic classification:
 
 ```{r}
 gd_pop <- merge(geodemo, pop, by = "GEOID")
@@ -112,8 +106,160 @@ tm_shape(gd_pop) +
 
 ## PART 2 - CATCHMENT ANALYSIS
 
+Ok, now that we are familiar with the three main datasets, we can actually get to some 'spatial data science'. In this workshop we are going to be looking at the geodemographic profiles of two very different retailers:
 
+- Whole Foods Market - *insert descr*
+- Ollie's Bargain Outlet - *insert descr*
+
+```{r}
+wholefoods <- places %>%
+  filter(brands == "Whole Foods Market")
+
+ollies <- places %>%
+  filter(brands == "Ollie's Bargain Outlet")
+```
+
+Let's visualise these:
+
+```{r}
+q1 <- tm_shape(wholefoods) +
+  tm_dots(col = "black", size = 0.1) +
+  tm_text("brands") +
+  tm_shape(ollies) +
+  tm_dots(col = "black", size = 0.1) +
+  tm_text("brands")
+
+q1
+```
+
+And what does this look like with the geodemographic classification underneath:
+
+```{r}
+tm_shape(gd_pop) +
+  tm_fill(col = "TractGroup", alpha = 0.2) +
+  tm_borders(col = "black", lwd = 0.1) +
+  q1
+```
+
+So there are some pretty obvious locational differences between them. But how can we assess this - catchments.
+
+Let's build a 1km buffer for whole foods stores:
+
+```{r}
+wholefoods_catch <- st_buffer(wholefoods, 1000)
+```
+
+What do these look like:
+
+```{r}
+q2 <- tm_shape(wholefoods) +
+  tm_dots(col = "black", size = 0.1) +
+  tm_text("brands") + 
+  tm_shape(wholefoods_catch) +
+  tm_polygons(col = "red", alpha = 0.3)
+```
+
+And with the geodemographic: 
+
+```{r}
+tm_shape(gd_pop) +
+  tm_fill(col = "TractGroup", alpha = 0.2) +
+  tm_borders(col = "black", lwd = 0.1) +
+  q2
+```
+
+Let's repeat the same for Ollie's Bargain Outlet
+
+```{r}
+ollies_catch <- st_buffer(ollies, 1000)
+```
+
+What do these look like:
+
+```{r}
+q3 <- tm_shape(ollies) +
+  tm_dots(col = "black", size = 0.1) +
+  tm_text("brands") + 
+  tm_shape(ollies_catch) +
+  tm_polygons(col = "red", alpha = 0.3)
+```
+
+And with the geodemographic: 
+
+```{r}
+tm_shape(gd_pop) +
+  tm_fill(col = "TractGroup", alpha = 0.2) +
+  tm_borders(col = "black", lwd = 0.1) +
+  q3
+```
 
 ## PART 3 - CATCHMENT PROFILING
+
+Ok, so we have constructed catchment for each of these stores, enabling us to identify people living nearby that are more likely to shop there, we can profile exactly who these people are.
+
+Let's do a spatial join, allowing us to see what tracts (and geodemographics) fall within each store catchment:
+
+```{r}
+wholefoods_gd <- st_join(wholefoods_catch, gd_pop)
+```
+
+Let's take a look at the output:
+
+```{r}
+head(wholefoods_gd)
+```
+What we want to do for each store is calculate the total catchment population in the catchment, and the total population disaggregated by geodemographic group. This is easy with tidyverse.
+
+First, get the total population in each catchment:
+
+```{r}
+wholefood_profile <- wholefoods_gd %>%
+  as.data.frame() %>%
+  select(-c(geom)) %>%
+  group_by(location_name, placekey) %>%
+  summarise(catch_pop = sum(value))
+
+```
+
+Then get the total population by geodemographic group in each catchment:
+
+```{r}
+wholefood_gd_profile <- wholefoods_gd %>%
+  as.data.frame() %>%
+  select(-c(geom)) %>%
+  group_by(location_name, placekey, TractGroup) %>%
+  summarise(catch_gd_pop = sum(value))
+```
+
+Bring the two values together:
+
+```{r}
+wholefood_profile <- merge(wholefood_profile, wholefood_gd_profile, by = c("location_name", "placekey"), all.x = TRUE)
+```
+
+```{r}
+head(wholefood_profile)
+```
+Calculate proportion of catchment occupied by each geodemographic group:
+
+```{r}
+wholefood_profile_final <- wholefood_profile %>%
+  mutate(gd_prop = (catch_gd_pop / catch_pop) * 100) %>%
+  select(location_name, placekey, TractGroup, gd_prop)
+```
+
+Let's visualise the breakdown of different groups between stores:
+
+```{r}
+wholefood_profile_final %>%
+  complete(TractGroup, location_name, placekey, fill=list(gd_prop=0)) %>%
+  ggplot(aes(fill = TractGroup, x = placekey, y = gd_prop)) +
+  geom_bar(stat = "identity") +
+  theme(axis.text.x = element_blank())
+```
+Calculating an exposure score (integrate z-scores here)...
+
+## Part 4) Optional Extra: Drive-Time Catchments 
+
 
 
